[tool.poetry]
name = "databricks-bundle"
version = "0.7.2"
description = "Databricks bundle for the Bricksflow framework"
readme = "README.md"
repository = "https://github.com/bricksflow/databricks-bundle"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "databricksbundle", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
pyfony-core = "^0.7.1"
pyfony-bundles = "^0.3.2"
injecta = "^0.9.1"
logger-bundle = "^0.6.1"
console-bundle = "^0.3.1"

[tool.poetry.dev-dependencies]
databricks-connect = ">=7.3.7,<8.0.0"
pylint = "^2.4"
pytest = "^5.2"

[tool.poetry.plugins."pyfony.bundle"]
create = "databricksbundle.DatabricksBundle:DatabricksBundle.autodetect"

[pyfony.bootstrap]
containerInit = "pyfonycore.container.containerInit:initWithCurrentBundle"
rootModuleName = "databricksbundle"
allowedEnvironments = ["test_aws", "test_azure"]
